--- a/styles-index.css
+++ b/styles-index.css
@@ -1,24 +1,25 @@
-*{
+/*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
+}*/
 
 .container{
     display: grid;
-    height: 100%;
-    right: 100%;
+    height: 200vh;
+   /* right: 100%; */
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 64px 48px 180px 200px 200px 48px;
+    grid-template-rows: 0.09fr 0.2fr 3fr 1.5fr 1.5fr 1.5fr 1fr;
     grid-template-areas: 
             /*column1   column2     column3     column4*/
     /*row1*/ "header     header      header      header" 
     /*row2*/ "nav        nav         nav         nav"    
-    /*row3*/ "aside       aside       aside       aside"  
-    /*row4*/ "main        main          main       sidebar"     
-    /*row5*/ "content1    content2       content3     sidebar" 
-    /*row7*/ "footer       footer         footer         footer";
-
+    /*row3*/ "aside      aside       aside       aside"     
+    /*row4*/ "content1   content2    content3    sidebar" 
+    /*row5*/ "content4   content5    content6    sidebar" 
+    /*row6*/ "content7   content8    content9    sidebar" 
+    /*row7*/ "footer     footer      footer      footer";
+    align-content: center;
     grid-gap: 0.2rem;
 }
 
@@ -36,11 +37,7 @@ nav{
 aside{
     background: cornflowerblue;
     grid-area: aside;
-}
-
-main{
-    background: bisque;
-    grid-area: main;
+    width: auto;
 }
 
 #sidebar{
@@ -60,24 +57,90 @@ main{
     background: palevioletred;
     grid-area: content3;
 }
+#content4{
+    background: palevioletred;
+    grid-area: content4;
+}
+#content5{
+    background: palevioletred;
+    grid-area: content5;
+}
+#content6{
+    background: palevioletred;
+    grid-area: content6;
+}
+#content7{
+    background: palevioletred;
+    grid-area: content7;
+}
+#content8{
+    background: palevioletred;
+    grid-area: content8;
+}
+#content9{
+    background: palevioletred;
+    grid-area: content9;
+}
 
 footer{
     background: lightsalmon;
     grid-area: footer;
 }
 
-@media screen and (max-width:550px){
+.sliderOfertas {
+    width: 92.5%;
+    height:100%;
+    margin: auto;
+    overflow: hidden;
+}
+
+.sliderOfertas ul{
+    
+    display: flex;
+    padding: 0;
+    width: 300%;
+    animation: cambio 20s infinite;
+    animation-direction: alternate;
+    animation-timing-function: ease-out;
+}
+
+.sliderOfertas li{
+    width: 100%;
+    list-style: none;
+    
+}
+
+.sliderOfertas img {
+    width: 100%;
+    margin: auto auto auto auto;
+}
+
+@keyframes cambio {
+    0%{ margin-left: 0; }
+    30%{ margin-left: 0; }
+
+    33%{ margin-left: -100%; }
+    60%{ margin-left: -100%; }
+
+    66%{ margin-left: -200%; }
+    100%{ margin-left: -200%; }
+
+
+}
+
+@media screen and (max-width:400px){
     .container{
-        grid-template-columns: 1fr;
-        grid-template-rows:  0.4fr  0.4fr     2.2fr  1.2fr      1.2fr      1.2fr      1fr;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows:  0.2fr 0.4fr 2.2fr 2.52fr 1.6fr 1.6fr 1.6fr 1.2fr;
         grid-template-areas: 
                     /*Columna web mobil*/
-            /*row1*/    "nav"
-            /*row2*/    "sidebar"
-            /*row3*/    "main"
-            /*row4*/    "content1" 
-            /*row5*/    "content2" 
-            /*row6*/    "content3" 
-            /*row7*/    "footer";
+            /*row0*/    "header     header      header "
+            /*row1*/    "nav        nav         nav"
+            /*row2*/    "sidebar    sidebar     sidebar"
+            /*row3*/    "aside      aside       aside"
+            /*row4*/    "content1   content2    content3" 
+            /*row5*/    "content4   content5    content6"
+            /*row5*/    "content7   content8    content9"
+            /*row7*/    "footer     footer      footer";
     }
 }
